# SandGears

./: .gitignore  Cargo.toml  README.md
.github/workflows/: .rustfmt.yml
shaders/: shader.frag  shader.vert
src/: main.rs
